Fixed distortion issues with website

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ nav > ul{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 50vh;
+    height: auto;
     position: relative;
     background-color: rgb(250, 250, 250);
 }
